@@ -39,6 +39,8 @@ void* OSAllocator::reserveUncommitted(size_t bytes, Usage usage, bool writable, 
     void* result = reserveAndCommit(bytes, usage, writable, executable, includesGuardPages);
 #if OS(QNX)
     posix_madvise(result, bytes, POSIX_MADV_DONTNEED);
+#elif OS(LINUX)
+    madvise(result, bytes, MADV_DONTNEED);
 #elif HAVE(MADV_FREE_REUSE)
     // To support the "reserve then commit" model, we have to initially decommit.
     while (madvise(result, bytes, MADV_FREE_REUSABLE) == -1 && errno == EAGAIN) { }
@@ -124,6 +126,8 @@ void OSAllocator::commit(void* address, size_t bytes, bool, bool)
 {
 #if OS(QNX)
     posix_madvise(address, bytes, POSIX_MADV_WILLNEED);
+#elif OS(LINUX)
+    madvise(address, bytes, MADV_WILLNEED);
 #elif HAVE(MADV_FREE_REUSE)
     while (madvise(address, bytes, MADV_FREE_REUSE) == -1 && errno == EAGAIN) { }
 #else
@@ -137,6 +141,8 @@ void OSAllocator::decommit(void* address, size_t bytes)
 {
 #if OS(QNX)
     posix_madvise(address, bytes, POSIX_MADV_DONTNEED);
+#elif OS(LINUX)
+    madvise(address, bytes, MADV_DONTNEED);
 #elif HAVE(MADV_FREE_REUSE)
     while (madvise(address, bytes, MADV_FREE_REUSABLE) == -1 && errno == EAGAIN) { }
 #elif HAVE(MADV_FREE)
